fix messages_since
