# docs/swagger.json
@@ -278,6 +278,12 @@
                 "parameters": [
                     {
                         "type": "integer",
+                        "description": "return elements since a message id",
+                        "name": "messages_since",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
                         "description": "page number",
                         "name": "page",
                         "in": "query"
@@ -454,18 +460,6 @@
                             "type": "string"
                         }
                     },
-                    "400": {
-                        "description": "ok",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "404": {
-                        "description": "ok",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
                     "500": {
                         "description": "ok",
                         "schema": {
@@ -550,9 +544,6 @@
         "connection.CreateConnectionRequest": {
             "type": "object",
             "properties": {
-                "name": {
-                    "type": "string"
-                },
                 "selfid": {
                     "type": "string"
                 }
@@ -646,15 +637,6 @@
             "type": "object",
             "properties": {
                 "body": {
-                    "type": "string"
-                },
-                "cid": {
-                    "type": "string"
-                },
-                "iat": {
-                    "type": "string"
-                },
-                "rid": {
                     "type": "string"
                 }
             }
